[package]
name = "learn_wgpu"
version = "0.1.0"
edition = "2021"

[features]
default = []
desktop = []

[lib]
name = "learn_wgpu"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib", "staticlib"]

[[bin]]
path = "src/lib.rs"
name = "wgpu_example"
required-features = [ "desktop" ]

[dependencies]
winit = "0.28"
log = "0.4"
wgpu = "0.16"

[target.'cfg(all(not(target_arch = "wasm32"), not(target_os = "android")))'.dependencies]
env_logger = "0.10"

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.13"
winit = { version = "0.28", features = [ "android-native-activity" ] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "1.0"
wgpu = { version = "0.16", features = ["webgl"]}
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.30"
web-sys = { version = "0.3", features = [
  "Document",
  "Window",
  "Element",
]}

[package.metadata.android]
package = "io.dispersia.foo"
build_targets = [ "armv7-linux-androideabi", "aarch64-linux-android"]
apk_name = "learn_wgpu"

[package.metadata.android.sdk]
target_sdk_version = 34